aws/NetworkAcls-ap-northeast-1.json
{
 "NetworkAcls": [
  {
   "Associations": [
    {
     "SubnetId": "subnet-ae8be0d9", 
     "NetworkAclId": "acl-d06201b5", 
     "NetworkAclAssociationId": "aclassoc-49a1072d"
    }, 
    {
     "SubnetId": "subnet-a8f674f1", 
     "NetworkAclId": "acl-d06201b5", 
     "NetworkAclAssociationId": "aclassoc-48a1072c"
    }
   ], 
   "NetworkAclId": "acl-d06201b5", 
   "VpcId": "vpc-2c22b549", 
   "Tags": [], 
   "Entries": [
    {
     "RuleNumber": 100, 
     "Protocol": "-1", 
     "Egress": true, 
     "CidrBlock": "0.0.0.0/0", 
     "RuleAction": "allow"
    }, 
    {
     "RuleNumber": 32767, 
     "Protocol": "-1", 
     "Egress": true, 
     "CidrBlock": "0.0.0.0/0", 
     "RuleAction": "deny"
    }, 
    {
     "RuleNumber": 100, 
     "Protocol": "-1", 
     "Egress": false, 
     "CidrBlock": "0.0.0.0/0", 
     "RuleAction": "allow"
    }, 
    {
     "RuleNumber": 32767, 
     "Protocol": "-1", 
     "Egress": false, 
     "CidrBlock": "0.0.0.0/0", 
     "RuleAction": "deny"
    }
   ], 
   "IsDefault": true
  }
 ]
}
